# claim-engine

./: .gitignore  README.md
stampd-claim-engine/: .gitignore  Cargo.toml  README.md  host.json  signed.c2pa
stampd-claim-engine/src/: azure_func.rs  c2pa_func.rs  c2pa_structs  helper_func.rs  main.rs
stampd-claim-engine/tmp/: payload.json
